# mrs_uav_unreal_simulation

./: .gitignore  .gitman.yaml  CMakeLists.txt  README.md  nodelets.xml  package.xml  plugins.xml
cfg/: unreal_simulator.cfg
config/: flightforge_simulator.yaml  hw_api.yaml  multirotor_simulator.yaml  uavs.yaml  unreal_simulator.yaml
config/controllers/: attitude_controller.yaml  mixer.yaml  position_controller.yaml  rate_controller.yaml  velocity_controller.yaml
config/mrs_uav_system/: a300.yaml  f550.yaml  robofly.yaml  t650.yaml
config/uavs/: a300.yaml  f330.yaml  f450.yaml  f550.yaml  naki.yaml  robofly.yaml  t650.yaml  x500.yaml
include/: cereal  drone_controller_ros.h  flight_forge_connector  kissnet
include/ueds_connector/: .ueds_connector.h.swp  data-types.h  data_types.h  game-mode-controller.h  game_mode_controller.h  socket-client.h  socket_client.h  ueds_connector.h
include/ueds_connector/serialization/: serializable-extended.h  serializable-shared.h  serializable_extended.h  serializable_shared.h
launch/: .unreal_simulator.launch.swp  flightforge_simulator.py  hw_api.launch  hw_api.py  mapplan.launch  nodelet_manager.launch  octomap_planner_hitl.launch  open_vins_simulation_unreal_hitl.launch  stereo_image_proc.launch  unreal_simulator.launch  vins_republisher_openvins_unreal_hitl.launch
scripts/: get_public_params.py
src/: .unreal_simulator.cpp.swp  flightforge_simulator.cpp  hw_api_plugin.cpp  unreal_simulator.cpp
src/flight_forge_connector/: flight_forge_connector.cpp  game_mode_controller.cpp  socket_client.cpp
src/ueds_connector/: .drone_controller_ros.cpp.swp  drone_controller_ros.cpp  game-mode-controller.cpp  game_mode_controller.cpp  socket-client.cpp  socket_client.cpp  ueds_connector.cpp
srv/: SetOrientation.srv
tmux/: rviz.rviz  rviz_1_ueds.rviz  session.yml
tmux/config/: .octomap_server.yaml.swp  automatic_start.yaml  custom_config.yaml  network_config.yaml  octomap_planner.yaml  simulator.yaml
tmux/one_drone/: goto.py  mapplan.launch  path.py  rviz.rviz  session.yml
tmux/one_drone/config/: automatic_start.yaml  multirotor_simulator.yaml  octomap_planner.yaml  octomap_server.yaml  simulator.yaml  world_config.yaml
tmux/one_drone_3dlidar/: session.yml
tmux/one_drone_3dlidar/config/: custom_config.yaml  my_planner.rviz  octomap_planner.yaml  octomap_server.yaml  ouster_filter_mapping.yaml  rviz.rviz  world_config.yaml
tmux/one_drone_hitl/: TODO.md  session.yml
tmux/one_drone_hitl/config/: octomap_planner.yaml  simulator.yaml  world_config.yaml
tmux/one_drone_zigzag/: session.yml
tmux/one_drone_zigzag/config/: octomap_server.yaml  simulator.yaml
tmux/two_drones/: rviz.rviz  session.yml
tmux/two_drones/config/: hw_api.yaml  network_config.yaml  simulator.yaml  world_config.yaml
tmux/two_drones_TODO_UPDATE/: rviz.rviz  session.yml
tmux/two_drones_TODO_UPDATE/config/: octomap_planner.yaml
