<?xml version="1.0"?>
<package format="2">

  <name>mrs_uav_unreal_simulation</name>
  <version>1.0.0</version>
  <description>The MRS UnrealEngine simulator</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_uav_hw_api</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>mrs_multirotor_simulator</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
    <mrs_uav_hw_api plugin="${prefix}/plugins.xml" />
  </export>

</package>
