<?xml version="1.0"?>
<package format="3">

  <name>mrs_uav_flightforge_simulation</name>
  <version>2.0.0</version>
  <description>The MRS FlightForge simulator</description>

  <author email="capekda4@fel.cvut.cz">David Capek</author>
  <maintainer email="capekda4@fel.cvut.cz">David Capek</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>pluginlib</depend>
  <depend>builtin_interfaces</depend>

  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_uav_hw_api</depend>
  <depend>nav_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>mrs_multirotor_simulator</depend>
  <depend>stereo_image_proc</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  
  <depend>geometry_msgs</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
